--- a/CSS/color.css
+++ b/CSS/color.css
@@ -1,8 +1,7 @@
 :root {
     --header-nav: #4A7C59;
     --text-block: #FAF3DD;
-    /*--extra: #C8D5B9;
+    /*--extra: #C8D5B9; */
     --background: #8FC0A9;
     --elements: #68B0AB;
-     */
 }
