--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,12 @@
     --elements: #68B0AB;
 }
 
-body {
-    font-family: 'Inter', sans-serif;
+/*body {*/
+/*    font-family: 'Inter', sans-serif;*/
+/*}*/
+
+.scope-one-regular {
+    font-family: "Scope One", serif;
+    font-weight: 400;
+    font-style: normal;
 }
