Worked on index

--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap");
 @import "tailwindcss";
+@import "style.css";
 
 @theme {
     --font-alan: "Alan Sans", sans-serif;
